Fix badly aligned header, remove footer from reader page

--- a/www/static/css/foliate.css
+++ b/www/static/css/foliate.css
@@ -23,7 +23,6 @@ main {
 }
 
 #sidebar-header {
-    width: 100vh;
     padding: 8px;
 }
 
